[gd_scene load_steps=24 format=3 uid="uid://c6y6t0ckd1yaa"]

[ext_resource type="Script" uid="uid://djjcpadwhefev" path="res://addons/handy_nodes/nodes/container_agent.gd" id="1_5hgw5"]
[ext_resource type="Script" uid="uid://bynnlg6cyqokh" path="res://scenes/ui/image_layers_ui/image_layers_ui.gd" id="1_temu2"]
[ext_resource type="PackedScene" uid="uid://bu4hy0uildd2x" path="res://scenes/ui/image_layers_ui/w_layer_opacity.tscn" id="2_6ku13"]
[ext_resource type="Texture2D" uid="uid://c6vpbof8q2dyu" path="res://assets/icons/library_add_96dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.svg" id="2_e1gak"]
[ext_resource type="Texture2D" uid="uid://cs11aqx2xidq3" path="res://assets/icons/delete_96dp_FFFFFF_FILL1_wght400_GRAD0_opsz48.svg" id="2_kriey"]
[ext_resource type="PackedScene" uid="uid://flmr31hfks82" path="res://scenes/ui/image_layers_ui/layer.tscn" id="2_temu2"]
[ext_resource type="Script" uid="uid://dr2vyuwskcgl3" path="res://components/popup_arrow_panel_manager/popup_text_tooltip_helper.gd" id="3_1nnl3"]
[ext_resource type="Texture2D" uid="uid://b7mpi33k45u0p" path="res://assets/icons/merge_down.svg" id="3_ha8yx"]
[ext_resource type="Texture2D" uid="uid://d0pukt5cox26n" path="res://assets/icons/outline.svg" id="4_jgmjq"]
[ext_resource type="Script" uid="uid://3x7ykqpcwxmj" path="res://components/outline_generate/outline_generate_caller.gd" id="5_1nnl3"]
[ext_resource type="Script" uid="uid://domh3j7r0ah0v" path="res://addons/handy_nodes/nodes/scroll_dragger.gd" id="5_e1gak"]
[ext_resource type="Texture2D" uid="uid://duouu4o5hicg3" path="res://assets/icons/color_switch.svg" id="5_sf231"]
[ext_resource type="Texture2D" uid="uid://mh2qrrgff6ak" path="res://assets/icons/keyboard_arrow_up_96dp_FFFFFF_FILL0_wght400_GRAD0_opsz48.svg" id="6_kriey"]
[ext_resource type="Texture2D" uid="uid://cohqac8xvo007" path="res://assets/icons/keyboard_arrow_down_96dp_FFFFFF_FILL0_wght400_GRAD0_opsz48.svg" id="7_b6ovq"]
[ext_resource type="Script" uid="uid://bgh4j8cbug710" path="res://components/color_switch/color_switch_caller.gd" id="7_jgmjq"]
[ext_resource type="Shader" uid="uid://dsrhe3ayjhwqn" path="res://assets/shader/quad_map.gdshader" id="7_kriey"]
[ext_resource type="Script" uid="uid://bfif1mfm0s464" path="res://addons/handy_nodes/nodes/free_parent_when_start.gd" id="7_w53l4"]
[ext_resource type="Script" uid="uid://c6ob21ox68x3t" path="res://addons/handy_nodes/nodes/scroll_border_indicator.gd" id="9_w53l4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_temu2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e1gak"]
bg_color = Color(0.980392, 0.956863, 0.901961, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kriey"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b6ovq"]
shader = ExtResource("7_kriey")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kriey"]
bg_color = Color(0.980392, 0.956863, 0.901961, 1)
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="ImageLayersUI" type="PanelContainer"]
custom_minimum_size = Vector2(0, 480)
offset_right = 244.0
offset_bottom = 680.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_temu2")
script = ExtResource("1_temu2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 24

[node name="VBoxContainer3" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="MergeDownButton" type="Button" parent="HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_type_variation = &"base_button"
icon = ExtResource("3_ha8yx")
icon_alignment = 1

[node name="PopupTextTooltipHelper" type="Node" parent="HBoxContainer/VBoxContainer3/MergeDownButton"]
script = ExtResource("3_1nnl3")
title = "向下合并"
tooltip = "将当前图层和下方图层进行合并"
duration = 6.0

[node name="OutlineButton" type="Button" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_type_variation = &"base_button"
icon = ExtResource("4_jgmjq")
icon_alignment = 1

[node name="OutlineGenerateCaller" type="Node" parent="HBoxContainer/VBoxContainer3/OutlineButton"]
script = ExtResource("5_1nnl3")

[node name="PopupTextTooltipHelper" type="Node" parent="HBoxContainer/VBoxContainer3/OutlineButton"]
script = ExtResource("3_1nnl3")
title = "描边生成"
tooltip = "创建当前图层或者选区内容的描边"
duration = 6.0

[node name="ColorSwitchButton" type="Button" parent="HBoxContainer/VBoxContainer3"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
theme_type_variation = &"base_button"
icon = ExtResource("5_sf231")
icon_alignment = 1

[node name="ColorSwitchCaller" type="Node" parent="HBoxContainer/VBoxContainer3/ColorSwitchButton"]
script = ExtResource("7_jgmjq")

[node name="PopupTextTooltipHelper" type="Node" parent="HBoxContainer/VBoxContainer3/ColorSwitchButton"]
script = ExtResource("3_1nnl3")
title = "颜色替换"
tooltip = "替换当前图层或者选区所选的颜色"
duration = 6.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
theme_override_constants/separation = 8

[node name="WidgetLayerOpacity" parent="HBoxContainer/VBoxContainer2" instance=ExtResource("2_6ku13")]
unique_name_in_owner = true
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_e1gak")

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="DeleteButton" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color(0.196078, 0.192157, 0.176471, 1)
custom_minimum_size = Vector2(96, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
toggle_mode = true
icon = ExtResource("2_kriey")
flat = true
icon_alignment = 1

[node name="VSeparator" type="VSeparator" parent="HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2"]
layout_mode = 2
theme_type_variation = &"seperator_widget_v"

[node name="AddLayerButton" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer/HBoxContainer2"]
unique_name_in_owner = true
self_modulate = Color(0.196078, 0.192157, 0.176471, 1)
texture_filter = 1
custom_minimum_size = Vector2(144, 96)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3
focus_mode = 0
toggle_mode = true
icon = ExtResource("2_e1gak")
flat = true
icon_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_kriey")

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer/PanelContainer3"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 3

[node name="ContainerAgent" type="Node" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer" node_paths=PackedStringArray("container")]
unique_name_in_owner = true
script = ExtResource("1_5hgw5")
container = NodePath("../MarginContainer/VBoxContainer")

[node name="ScrollDragger" type="Node" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer" node_paths=PackedStringArray("agent")]
script = ExtResource("5_e1gak")
agent = NodePath("..")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 12

[node name="Layer" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_temu2")]
layout_mode = 2

[node name="FPWS" type="Node" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer/VBoxContainer/Layer"]
script = ExtResource("7_w53l4")

[node name="Layer2" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_temu2")]
layout_mode = 2

[node name="FPWS2" type="Node" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer/VBoxContainer/Layer2"]
script = ExtResource("7_w53l4")

[node name="Layer3" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_temu2")]
layout_mode = 2

[node name="FPWS3" type="Node" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer/VBoxContainer/Layer3"]
script = ExtResource("7_w53l4")

[node name="Layer4" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("2_temu2")]
layout_mode = 2

[node name="FPWS4" type="Node" parent="HBoxContainer/VBoxContainer/PanelContainer3/ScrollContainer/MarginContainer/VBoxContainer/Layer4"]
script = ExtResource("7_w53l4")

[node name="UpShadow" type="ColorRect" parent="HBoxContainer/VBoxContainer/PanelContainer3" node_paths=PackedStringArray("scroll_container")]
material = SubResource("ShaderMaterial_b6ovq")
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("9_w53l4")
scroll_container = NodePath("../ScrollContainer")
type = 1

[node name="DownShadow" type="ColorRect" parent="HBoxContainer/VBoxContainer/PanelContainer3" node_paths=PackedStringArray("scroll_container")]
material = SubResource("ShaderMaterial_b6ovq")
instance_shader_parameters/v = 0.0
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 10
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("9_w53l4")
scroll_container = NodePath("../ScrollContainer")
type = 3

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_kriey")

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="MoveUpButton" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.196078, 0.192157, 0.176471, 1)
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
icon = ExtResource("6_kriey")
flat = true
icon_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
visible = false
layout_mode = 2
theme_type_variation = &"seperator_widget_v"

[node name="MoveDownButton" type="Button" parent="HBoxContainer/VBoxContainer/PanelContainer2/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.196078, 0.192157, 0.176471, 1)
custom_minimum_size = Vector2(0, 96)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
icon = ExtResource("7_b6ovq")
flat = true
icon_alignment = 1
